--- a/diplom_clean/imgui.ini
+++ b/diplom_clean/imgui.ini
@@ -1,19 +1,19 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=324,215
+Size=654,256
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=12,306
-Size=345,634
-Collapsed=0
+Pos=1311,308
+Size=561,634
+Collapsed=1
 
 [Window][DockSpace Demo]
 Size=1920,1060
 Collapsed=0
 
 [Window][Renderer]
-Pos=1612,496
+Pos=1590,450
 Size=289,474
 Collapsed=0
 
@@ -24,7 +24,7 @@ Collapsed=0
 
 [Window][Example: Auto-resizing window]
 Pos=60,60
-Size=345,282
+Size=345,300
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -38,13 +38,73 @@ Size=500,440
 Collapsed=0
 
 [Window][Buffer View]
-Pos=19,400
-Size=218,553
+Pos=99,357
+Size=223,529
 Collapsed=0
 
 [Window][Light Button]
 Pos=60,60
 Size=114,56
+Collapsed=0
+
+[Window][Example: Log]
+Pos=479,451
+Size=500,400
+Collapsed=0
+
+[Window][Log]
+Pos=76,10
+Size=423,297
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=424,166
+Size=520,600
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=511,240
+Size=328,64
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=477,380
+Size=328,64
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=476,512
+Size=294,89
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=470,326
+Size=448,436
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=551,71
+Size=312,918
+Collapsed=0
+
+[Window][Example: Console]
+Pos=553,223
+Size=520,600
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=795,478
+Size=326,180
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=494,475
+Size=420,402
+Collapsed=0
+
+[Window][Controls]
+Pos=60,60
+Size=233,133
 Collapsed=0
 
 [Docking][Data]
