--- a/diplom_clean/imgui.ini
+++ b/diplom_clean/imgui.ini
@@ -4,7 +4,7 @@ Size=654,256
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1311,308
+Pos=1066,58
 Size=561,634
 Collapsed=1
 
@@ -14,7 +14,7 @@ Collapsed=0
 
 [Window][Renderer]
 Pos=1590,450
-Size=289,474
+Size=306,478
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -38,7 +38,7 @@ Size=500,440
 Collapsed=0
 
 [Window][Buffer View]
-Pos=99,357
+Pos=84,394
 Size=223,529
 Collapsed=0
 
@@ -53,8 +53,8 @@ Size=500,400
 Collapsed=0
 
 [Window][Log]
-Pos=76,10
-Size=423,297
+Pos=262,47
+Size=387,332
 Collapsed=0
 
 [Window][Example: Long text display]
@@ -103,8 +103,18 @@ Size=420,402
 Collapsed=0
 
 [Window][Controls]
-Pos=60,60
-Size=233,133
+Pos=60,47
+Size=424,705
+Collapsed=0
+
+[Window][Settings]
+Pos=160,52
+Size=318,543
+Collapsed=0
+
+[Window][Scene selection]
+Pos=1597,205
+Size=305,104
 Collapsed=0
 
 [Docking][Data]
