--- a/diplom_clean/imgui.ini
+++ b/diplom_clean/imgui.ini
@@ -9,13 +9,15 @@ Size=393,540
 Collapsed=0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1920,1060
 Collapsed=0
 
 [Window][Renderer]
-Pos=1603,396
-Size=306,478
+Pos=1642,20
+Size=278,1040
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Property editor]
 Pos=60,60
@@ -38,9 +40,10 @@ Size=500,440
 Collapsed=0
 
 [Window][Buffer View]
-Pos=16,348
-Size=417,546
+Pos=0,20
+Size=233,1040
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Light Button]
 Pos=60,60
@@ -53,9 +56,10 @@ Size=500,400
 Collapsed=0
 
 [Window][Log]
-Pos=149,61
-Size=328,270
+Pos=235,850
+Size=1405,210
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Example: Long text display]
 Pos=424,166
@@ -123,5 +127,18 @@ Pos=481,316
 Size=435,114
 Collapsed=0
 
+[Window][Main Window]
+Pos=235,20
+Size=1405,828
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,51 Size=1920,1040 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=233,1040 Selected=0xED10352C
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1685,1040 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1405,768 Split=Y Selected=0x8FE86BE8
+      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1337,828 CentralNode=1 Selected=0x8FE86BE8
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1337,210 Selected=0xB7722E25
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=278,768 Selected=0x08EFC3CA
 
