--- a/diplom_clean/imgui.ini
+++ b/diplom_clean/imgui.ini
@@ -10,12 +10,12 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1060
+Size=1920,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=1642,20
-Size=278,1040
+Pos=1642,0
+Size=278,1061
 Collapsed=0
 DockId=0x00000006,0
 
@@ -40,10 +40,10 @@ Size=500,440
 Collapsed=0
 
 [Window][Buffer View]
-Pos=0,20
-Size=233,1040
+Pos=0,0
+Size=232,1061
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Light Button]
 Pos=60,60
@@ -56,8 +56,8 @@ Size=500,400
 Collapsed=0
 
 [Window][Log]
-Pos=235,850
-Size=1405,210
+Pos=234,851
+Size=1406,210
 Collapsed=0
 DockId=0x00000005,0
 
@@ -112,15 +112,15 @@ Size=449,693
 Collapsed=0
 
 [Window][Settings]
-Pos=27,402
+Pos=161,351
 Size=318,543
 Collapsed=0
 
 [Window][Scene selection]
-ViewportPos=1627,165
-ViewportId=0x7446D0D6
-Size=305,104
-Collapsed=1
+Pos=1642,0
+Size=278,1061
+Collapsed=0
+DockId=0x00000006,1
 
 [Window][About Dear ImGui]
 Pos=481,316
@@ -128,17 +128,17 @@ Size=435,114
 Collapsed=0
 
 [Window][Main Window]
-Pos=235,20
-Size=1405,828
+Pos=234,0
+Size=1406,849
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,51 Size=1920,1040 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=233,1040 Selected=0xED10352C
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1685,1040 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1405,768 Split=Y Selected=0x8FE86BE8
-      DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1337,828 CentralNode=1 Selected=0x8FE86BE8
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1337,210 Selected=0xB7722E25
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=278,768 Selected=0x08EFC3CA
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=8,31 Size=1920,1061 Split=X
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=232,1040 Selected=0xED10352C
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1686,1040 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1405,768 Split=Y Selected=0x8FE86BE8
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1406,785 CentralNode=1 Selected=0x8FE86BE8
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1406,210 Selected=0xB7722E25
+    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=278,768 Selected=0x7446D0D6
 
