preparations for program defence

--- a/diplom_clean/imgui.ini
+++ b/diplom_clean/imgui.ini
@@ -143,14 +143,14 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Візуалізатор]
-Pos=1653,0
-Size=267,1080
+Pos=1646,0
+Size=274,546
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000D,0
 
 [Window][Головне вікно]
 Pos=294,0
-Size=1357,791
+Size=1350,791
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -161,14 +161,14 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Вибір сцени]
-Pos=1653,0
-Size=267,1080
+Pos=1646,548
+Size=274,532
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x0000000E,0
 
 [Window][Логгер]
 Pos=294,793
-Size=1357,287
+Size=1350,287
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -180,10 +180,12 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,0 Size=1920,1080 Spl
     DockNode          ID=0x00000008 Parent=0x0000000A SizeRef=1617,1080 Split=X
       DockNode        ID=0x00000002 Parent=0x00000008 SizeRef=278,1040 Selected=0xED10352C
       DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=1640,1040 Split=X
-        DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1357,768 Split=Y Selected=0x8FE86BE8
+        DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1350,768 Split=Y Selected=0x8FE86BE8
           DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1406,785 Split=Y Selected=0x7E070245
             DockNode  ID=0x0000000B Parent=0x00000001 SizeRef=1311,791 CentralNode=1 Selected=0x7E070245
             DockNode  ID=0x0000000C Parent=0x00000001 SizeRef=1311,287 Selected=0xC06BAE03
           DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1406,210 Selected=0xB7722E25
-        DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=267,768 Selected=0x03D7A30C
+        DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=274,768 Split=Y Selected=0x5C24EDC7
+          DockNode    ID=0x0000000D Parent=0x00000006 SizeRef=267,536 Selected=0x5C24EDC7
+          DockNode    ID=0x0000000E Parent=0x00000006 SizeRef=267,523 Selected=0x03D7A30C
 
